--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,10 @@
     <string name="note">Note:</string>
     <string name="add_some_note">Add a note...</string>
     <string name="action_details">Action\'s Details</string>
+    <string name="settings">Settings</string>
+    <string name="about">About</string>
+    <string name="help">Help</string>
+    <string name="appName">How long does it take?</string>
+    <string name="usageConditions">Usage Conditions</string>
+    <string name="report_issue">Report Issue</string>
 </resources>
