--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -49,4 +49,5 @@
     <string name="time_white">Změnit barvu časovače na bílou</string>
     <string name="in_progress">Právě běží aktivita: %s</string>
     <string name="export_data">Exportovat</string>
+    <string name="version">1.0</string>
 </resources>
